finished mobile version. prevents soft keyboard opening on mobile

--- a/articles.css
+++ b/articles.css
@@ -1,29 +1,38 @@
+html{
+    height: 100%;
+}
 body {
-    background: url("bg.jpg");
+    height: 100%;
+    background: url("bg-mob.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center bottom;
+    margin: 0;
+    padding: 0;
 }
 
 span {
-    font-size: xx-large;
+    font-size: x-large;
     cursor: pointer;
 }
 
 h1 {
     text-align: center;
-    font-size: 5rem;
+    font-size: 2rem;
 }
 
-/*h2{*/
-/*display: block;*/
-/*width: 60%;*/
-/*margin: 0 auto;*/
-/*}*/
+h2{
+font-size: 1rem;
+}
+#instructions{
+    font-size: 0.8rem;
+}
 span::after {
     content: "\0020";
 }
 
 #container {
-    width: 60%;
+    width: 98%;
     margin: 0 auto;
 }
 
@@ -31,7 +40,7 @@ span::after {
     background-color: ivory;
     position: relative;
     /*width: 60%;*/
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 4px;
     /*margin: 0 auto;*/
     padding: 15px;
@@ -39,11 +48,11 @@ span::after {
 }
 
 a.button {
-    /*display: inline-block;*/
-    cursor: pointer;
-    background-color: #333333;
-    border: 0.16em solid rgba(255, 255, 255, 0);
-    font-weight: 300;
+    /*display: block;*/
+    background-color: navy;
+    /*border: 0.16em solid rgba(255, 255, 255, 0);*/
+    border: 0.16em solid white;
+    font-weight: 400;
     padding: 0.3em 1.2em;
     margin: 0 0.1em 0.1em 0;
     border-radius: 2em;
@@ -51,23 +60,9 @@ a.button {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    /*text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);*/
     text-align: center;
-    transition: all 0.1s;
-}
-
-a.button:hover {
-    border-color: black;
-    background-color: firebrick;
-    transform: translateX(3px);
-    transition: transform 0.1s linear;
-}
-
-@media all and (max-width: 30em) {
-     a.button4 {
-        display: block;
-        margin: 0.2em auto;
-    }
+    /*transition: all 0.1s;*/
 }
 
 #picker {
@@ -158,5 +153,163 @@ a.button:hover {
     to {
         top: 0;
         opacity: 0;
+    }
+}
+
+@media screen and (min-width: 1600px){ /* bigger than smartphones, generic desktop monitor 1920 */
+    body {
+        background: url("bg.jpg");
+        background-size: cover;
+    }
+
+    span {
+        font-size: xx-large;
+        cursor: pointer;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 5rem;
+    }
+
+    /*h2{*/
+    /*display: block;*/
+    /*width: 60%;*/
+    /*margin: 0 auto;*/
+    /*}*/
+    span::after {
+        content: "\0020";
+    }
+
+    #container {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    #terry {
+        background-color: ivory;
+        position: relative;
+        /*width: 60%;*/
+        border: 2px solid black;
+        border-radius: 4px;
+        /*margin: 0 auto;*/
+        padding: 15px;
+        margin-top: 1rem;
+    }
+
+    a.button {
+        /*display: inline-block;*/
+        cursor: pointer;
+        background-color: #333333;
+        border: 0.16em solid rgba(255, 255, 255, 0);
+        font-weight: 300;
+        padding: 0.3em 1.2em;
+        margin: 0 0.1em 0.1em 0;
+        border-radius: 2em;
+        box-sizing: border-box;
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        color: #FFFFFF;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-align: center;
+        transition: all 0.1s;
+    }
+
+    a.button:hover {
+        border-color: black;
+        background-color: firebrick;
+        transform: translateX(3px);
+        transition: transform 0.1s linear;
+    }
+
+    #picker {
+        /*border: 2px solid black;*/
+        width: 160px;
+        text-align: center;
+        position: fixed;
+        top: 120px;
+        left: 30px;
+        display: none;
+    }
+
+    .opt:hover {
+        background-color: green;
+    }
+
+    .opt {
+        display: inline-block;
+        font-size: x-large;
+        font-weight: bolder;
+        width: 40px;
+        border: 1px solid black;
+        background-color: greenyellow;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    #toast {
+        box-shadow: 20px 20px 50px 20px #fff, -20px -20px 50px 20px #fff, 20px -20px 50px 20px #fff, -20px 20px 50px 20px #fff;
+        visibility: hidden;
+        min-width: 250px;
+        background-color: #333;
+        text-align: center;
+        border-radius: 2px;
+        padding: 16px;
+        position: fixed;
+        z-index: 1;
+        top: 30px;
+        font-size: 32px;
+        font-family: "Times New Roman", serif;
+        color: cornsilk;
+    }
+
+    #toast.show {
+        visibility: visible;
+        -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+        animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    }
+
+    @-webkit-keyframes fadein {
+        from {
+            top: 0;
+            opacity: 0;
+        }
+        to {
+            top: 30px;
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadein {
+        from {
+            top: 0;
+            opacity: 0;
+        }
+        to {
+            top: 30px;
+            opacity: 1;
+        }
+    }
+
+    @-webkit-keyframes fadeout {
+        from {
+            top: 30px;
+            opacity: 1;
+        }
+        to {
+            top: 0;
+            opacity: 0;
+        }
+    }
+
+    @keyframes fadeout {
+        from {
+            top: 30px;
+            opacity: 1;
+        }
+        to {
+            top: 0;
+            opacity: 0;
+        }
     }
 }
